--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>These are the projects that i did</h1>
     <div class="section">
-      <a href="/Age Calculator/index.html">
+      <a href="https://codelearner123456.github.io/Age-Calculator/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Age%20Calculator.png?raw=true"
           alt=""
@@ -17,7 +17,7 @@
         <h1 class="text">Age Calculator</h1>
       </a>
 
-      <a href="/ASCII&Unicode Character Detector/index.html">
+      <a href="https://codelearner123456.github.io/ASCII-and-Unicode-charcter-detector">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/ASCII%20and%20Unicode%20Character%20Detector.jpg?raw=true"
           alt=""
@@ -25,7 +25,7 @@
         <h1 class="text">ASCII & Unicode Character Detector</h1>
       </a>
 
-      <a href="/Digital Clock/index.html">
+      <a href="https://codelearner123456.github.io/Digital-Clock/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Digital%20Clock.jpg?raw=true"
           alt=""
@@ -33,7 +33,7 @@
         <h1 class="text">Digital Time and Date</h1>
       </a>
 
-      <a href="/Expense Tracker/index.html">
+      <a href="https://codelearner123456.github.io/Expense-Tracker/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Expense%20Tracker.png?raw=true"
           alt=""
@@ -41,7 +41,7 @@
         <h1 class="text">Expense tracker</h1>
       </a>
 
-      <a href="/FD Calculator/index.html">
+      <a href="https://codelearner123456.github.io/Fd-Calculator/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Fd%20Calculator.png?raw=true"
           alt=""
@@ -49,7 +49,7 @@
         <h1 class="text">FD Calculator</h1>
       </a>
 
-      <a href="/Password Generator/index.html">
+      <a href="https://codelearner123456.github.io/Password-generator/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Password%20Genorator.png?raw=true"
           alt=""
@@ -57,7 +57,7 @@
         <h1 class="text">Password Generator</h1>
       </a>
 
-      <a href="/Popover Application/index.html">
+      <a href="https://codelearner123456.github.io/Popover-App/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Popover%20App.png?raw=trues"
           alt=""
@@ -65,7 +65,7 @@
         <h1 class="text">Popover Application</h1>
       </a>
 
-      <a href="/Tip Calculator/index.html">
+      <a href="https://codelearner123456.github.io/Tip-Calculator/">
         <img
           src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/Tip%20Calculator.png"
           alt=""
@@ -73,7 +73,7 @@
         <h1 class="text">Tip Calculator</h1>
       </a>
 
-      <a href="/Todo List/index.html">
+      <a href="https://codelearner123456.github.io/To-Do-List/">
         <img
           src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/To-do%20List.png"
           alt=""
@@ -81,7 +81,7 @@
         <h1 class="text">Todo List</h1>
       </a>
 
-      <a href="/Vowel checker/index.html">
+      <a href="https://codelearner123456.github.io/Vowel-Checker/">
         <img
           src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Vowel%20Checker.png?raw=true"
           alt=""
