--- a/index.html
+++ b/index.html
@@ -9,85 +9,96 @@
   <body>
     <h1>These are the projects that i did</h1>
     <div class="section">
-      <a href="/Age Calculator/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Age%20Calculator.png?raw=true"
-          alt=""
-        />
-        <h1 class="text">Age Calculator</h1>
-      </a>
-
-      <a href="/ASCII&Unicode Character Detector/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/ASCII%20and%20Unicode%20Character%20Detector.jpg?raw=true"
-          alt=""
-        />
-        <h1 class="text">ASCII & Unicode Character Detector</h1>
-      </a>
-
-      <a href="/Digital Clock/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Digital%20Clock.jpg?raw=true"
-          alt=""
-        />
-        <h1 class="text">Digital Time and Date</h1>
-      </a>
-
-      <a href="/Expense Tracker/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Expense%20Tracker.png?raw=true"
-          alt=""
-        />
-        <h1 class="text">Expense tracker</h1>
-      </a>
-
-      <a href="/FD Calculator/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Fd%20Calculator.png?raw=true"
-          alt=""
-        />
-        <h1 class="text">FD Calculator</h1>
-      </a>
-
-      <a href="/Password Generator/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Password%20Genorator.png?raw=true"
-          alt=""
-        />
-        <h1 class="text">Password Generator</h1>
-      </a>
-
-      <a href="/Popover Application/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Popover%20App.png?raw=trues"
-          alt=""
-        />
-        <h1 class="text">Popover Application</h1>
-      </a>
-
-      <a href="/Tip Calculator/index.html">
-        <img
-          src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/Tip%20Calculator.png"
-          alt=""
-        />
-        <h1 class="text">Tip Calculator</h1>
-      </a>
-
-      <a href="/Todo List/index.html">
-        <img
-          src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/To-do%20List.png"
-          alt=""
-        />
-        <h1 class="text">Todo List</h1>
-      </a>
-
-      <a href="/Vowel checker/index.html">
-        <img
-          src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Vowel%20Checker.png?raw=true"
-          alt=""
-        />
-        <h1 class="text">Vowel Checker</h1>
-      </a>
+      <section>
+        <a href="/Age Calculator/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Age%20Calculator.png?raw=true"
+            alt=""
+          />
+          <h1 class="text">Age Calculator</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/ASCII&Unicode Character Detector/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/ASCII%20and%20Unicode%20Character%20Detector.jpg?raw=true"
+            alt=""
+          />
+          <h1 class="text">ASCII & Unicode Character Detector</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Digital Clock/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Digital%20Clock.jpg?raw=true"
+            alt=""
+          />
+          <h1 class="text">Digital Time and Date</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Expense Tracker/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Expense%20Tracker.png?raw=true"
+            alt=""
+          />
+          <h1 class="text">Expense tracker</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/FD Calculator/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Fd%20Calculator.png?raw=true"
+            alt=""
+          />
+          <h1 class="text">FD Calculator</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Password Generator/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Password%20Genorator.png?raw=true"
+            alt=""
+          />
+          <h1 class="text">Password Generator</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Popover Application/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Popover%20App.png?raw=trues"
+            alt=""
+          />
+          <h1 class="text">Popover Application</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Tip Calculator/index.html">
+          <img
+            src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/Tip%20Calculator.png"
+            alt=""
+          />
+          <h1 class="text">Tip Calculator</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Todo List/index.html">
+          <img
+            src="https://raw.githubusercontent.com/Codelearner123456/Udemy-project2/main/Images/To-do%20List.png"
+            alt=""
+          />
+          <h1 class="text">Todo List</h1>
+        </a>
+      </section>
+      <section>
+        <a href="/Vowel checker/index.html">
+          <img
+            src="https://github.com/Codelearner123456/Udemy-project2/blob/main/Images/Vowel%20Checker.png?raw=true"
+            alt=""
+          />
+          <h1 class="text">Vowel Checker</h1>
+        </a>
+      </section>
     </div>
   </body>
 </html>
