--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>These are the projects that i did</h1>
+    <h1>These are the projects that I did</h1>
     <div class="section">
       <section>
         <a href="https://codelearner123456.github.io/Age-Calculator/">
@@ -102,6 +102,7 @@
         </a>
       </section>
     </div>
+    <footer>This project was made by Adeposi Olagunju</footer>
   </body>
 </html>
 
